--- a/packages/js/product-editor/src/components/attribute-control/new-attribute-modal.scss
+++ b/packages/js/product-editor/src/components/attribute-control/new-attribute-modal.scss
@@ -78,10 +78,6 @@
 		}
 	}
 
-	&__table-attribute-column {
-		position: relative;
-	}
-
 	&__table-attribute-trash-column {
 		display: flex;
 		justify-content: center;
